<resources>
    <string name="app_name">有赞收银</string>
    <string name="add_money">加金额</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>

    <string name="settlement_list">结算清单</string>
    <string name="no_add_any_goods">未添加任何商品</string>
    <string name="pay">收款</string>
    <string name="cancel_order">取单</string>
    <string name="cancel_full_order">整单取消</string>
    <string name="up_list">挂单</string>
    <string name="cancel">取消</string>
    <string name="single_discount">整单优惠</string>
    <string name="full_reductions">满减送</string>
    <string name="certificate_code">券码核销</string>
    <string name="other_function">其它功能</string>
</resources>
